# mio-signals

./: .cirrus.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  NOTES.win  README.md
.github/workflows/: main.yml
examples/: signal_handling.rs
src/: lib.rs
src/sys/: kqueue.rs  mod.rs  pipe.rs  signalfd.rs  unix.rs
tests/: cleanup.rs  multi_threaded.rs  signals.rs
