[package]
name          = "mio-signals"
description   = "Crate for handling signals with Mio."
version       = "0.1.3"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT"
documentation = "https://docs.rs/mio-signals"
repository    = "https://github.com/Thomasdezeeuw/mio-signals"
readme        = "README.md"
keywords      = ["signals", "mio"]
include       = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE"]
edition       = "2018"

[badges]
travis-ci = { repository = "Thomasdezeeuw/mio-signals", branch = "master" }

[dependencies]
libc = "0.2.80"
log  = "0.4.11"
# Need `SourceFd` from `os-util`.
mio  = { version = "0.7.6", features = ["os-ext"] }

[[test]]
name    = "multi_threaded"
harness = false
